--- a/src/main/resources/locale/en_US.yml
+++ b/src/main/resources/locale/en_US.yml
@@ -21,15 +21,13 @@ command-help-description: 'Displays the help menu... You have arrived'
 command-help-title: '&eAvailable Commands:'
 command-help-list-description: '&8 - &d/%cmd% %subcmd% %args% &7- %desc%'
 command-help-list-description-no-args: '&8 - &d/%cmd% %subcmd% &7- %desc%'
-command-help-wiki: '&9&o&nClick here to learn how to create loot tables.'
-command-help-wiki-hover: '&7%url%'
 
 # Reload Command
 command-reload-description: 'Reloads the plugin'
 command-reload-reloaded: '&eConfiguration and locale files were reloaded.'
 
-# Hello Command
-command-hello-description: 'Say hello to someone.'
-
-# Argument Handler Error Messages
-argument-handler-material: 'Material [%input%] does not exist'
+# Create Command
+command-create-description: 'Create a new chest shop'
+command-create-success: 'You have successfully created a chest shop.'
+command-create-invalid-item: 'You must be holding an item to create a chest shop.'
+command-create-invalid-block: 'You must be looking at a container to create a chest shop.'
