--- a/src/main/resources/locale/en_US.yml
+++ b/src/main/resources/locale/en_US.yml
@@ -1,33 +1,37 @@
 # Plugin Message Prefix
-prefix: '&7[<g:#8A2387:#E94057:#F27121>{{PLUGIN_NAME}}&7] '
+prefix: '<g:#00B4DB:#0083B0>&lChestShops &8| &f'
 
 # Generic Command Messages
-no-permission: '&cYou don''t have permission for that!'
-only-player: '&cThis command can only be executed by a player.'
-unknown-command: '&cUnknown command, use &b/%cmd% help &cfor more info.'
+no-permission: 'You don''t have permission for that!'
+only-player: 'This command can only be executed by a player.'
+unknown-command: 'Unknown command, use #00B4DB/%cmd% help &ffor more info.'
 unknown-command-error: '&cAn unknown error occurred; details have been printed to console. Please contact a server administrator.'
-invalid-subcommand: '&cInvalid subcommand.'
-invalid-argument: '&cInvalid argument: %message%.'
-invalid-argument-null: '&cInvalid argument: %name% was null.'
-missing-arguments: '&cMissing arguments, &b%amount% &crequired.'
-missing-arguments-extra: '&cMissing arguments, &b%amount%+ &crequired.'
+invalid-subcommand: 'Invalid subcommand.'
+invalid-argument: 'Invalid argument: %message%.'
+invalid-argument-null: 'Invalid argument: %name% was null.'
+missing-arguments: 'Missing arguments, &b%amount% &frequired.'
+missing-arguments-extra: 'Missing arguments, &b%amount%+ &frequired.'
+
 
 # Base Command Message
-base-command-color: '&e'
-base-command-help: '&eUse &b/%cmd% help &efor command information.'
+base-command-color: '#00B4DB'
+base-command-help: '&fUse #00B4DB/%cmd% help &ffor command information.'
 
 # Help Command
-command-help-description: 'Displays the help menu... You have arrived'
-command-help-title: '&eAvailable Commands:'
-command-help-list-description: '&8 - &d/%cmd% %subcmd% %args% &7- %desc%'
-command-help-list-description-no-args: '&8 - &d/%cmd% %subcmd% &7- %desc%'
+command-help-title: '&fAvailable Commands:'
+command-help-description: 'Displays the help menu.'
+command-help-list-description: '&8 - #00B4DB/%cmd% %subcmd% %args% &7- %desc%'
+command-help-list-description-no-args: '&8 - #00B4DB/%cmd% %subcmd% &7- %desc%'
 
 # Reload Command
-command-reload-description: 'Reloads the plugin'
-command-reload-reloaded: '&eConfiguration and locale files were reloaded.'
+command-reload-description: 'Reloads the plugin.'
+command-reload-reloaded: 'Configuration and locale files were reloaded'
 
 # Create Command
 command-create-description: 'Create a new chest shop'
 command-create-success: 'You have successfully created a chest shop.'
 command-create-invalid-item: 'You must be holding an item to create a chest shop.'
 command-create-invalid-block: 'You must be looking at a container to create a chest shop.'
+
+# Error Messages
+argument-handler-shop-type: 'Please specify a valid shop type. [Selling/Buying]'
