--- a/src/main/resources/locale/en_US.yml
+++ b/src/main/resources/locale/en_US.yml
@@ -48,6 +48,7 @@ command-create-description: 'Create a new chest shop'
 command-create-success: 'You have successfully created a chest shop.'
 command-create-invalid-item: 'You must be holding an item to create a chest shop.'
 command-create-invalid-block: 'You must be looking at a container to create a chest shop.'
+command-create-invalid-sign: 'There must be an empty sign infront of the shop.'
 
 # Remove Command
 command-remove-description: 'Remove a chest shop'
